--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+
 .container{
     width: 1440px;
 }
@@ -71,4 +72,43 @@ font-size: 3.75rem;
 ul{
     margin-bottom: 0px !important;
     margin-top: 0px !important;
+}
+input[type=checkbox]{
+    accent-color: #d9d9d9;
+   
+}
+.form-placeholder::placeholder{
+    padding-left: 20px;
+}
+.hover-orange{
+    color: black;
+}
+.hover-orange:hover{
+    color: #ff8f52;
+}
+.search-bar{
+   width: 491px;
+   height: 56px;
+   background-color: #FFFFFF;
+   border-radius: 5px;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   border: 1px solid #D9D9D9;
+}
+.search-bar input{
+    background: transparent;
+    border: 0;
+    flex:1;
+    outline: none;
+}
+.search-bar button img{
+    width: 23px;
+    margin-right: 17px;
+  
+}
+.search-bar button{
+    border:0;
+    background: transparent;
+
 }
